--- a/WebAppCRUD/Views/Contacts/Index.cshtml
+++ b/WebAppCRUD/Views/Contacts/Index.cshtml
@@ -5,6 +5,9 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New Contact</a>
 </p>
+<p>
+    <a asp-action="CreateBusiness" class="btn btn-primary">Create New Business Contact</a>
+</p>
 
 <table class="table">
     <thead>
@@ -12,7 +15,9 @@
         <th>Name</th>
         <th>Email</th>
         <th>Phone Number</th>
-        <th></th>
+        <th>Company Name</th>
+        <th>Job Title</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -22,6 +27,18 @@
             <td>@contact.Name</td>
             <td>@contact.Email</td>
             <td>@contact.PhoneNumber</td>
+
+            @if (contact is WebAppCRUD.Models.BusinessContact businessContact)
+            {
+                <td>@businessContact.CompanyName</td>
+                <td>@businessContact.Position</td>
+            }
+            else
+            {
+                <td>-</td>
+                <td>-</td>
+            }
+
             <td>
                 <a asp-action="Edit" asp-route-id="@contact.Id" class="btn btn-warning">Edit</a>
                 <a asp-action="Delete" asp-route-id="@contact.Id" class="btn btn-danger">Delete</a>
