--- a/WebAppCRUD/Views/Contacts/Index.cshtml
+++ b/WebAppCRUD/Views/Contacts/Index.cshtml
@@ -4,10 +4,16 @@
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New Contact</a>
-</p>
-<p>
     <a asp-action="CreateBusiness" class="btn btn-primary">Create New Business Contact</a>
 </p>
+<form asp-action="Index" method="get" class="mb-3">
+    <div class="input-group">
+        <input type="text" name="searchString" class="form-control" placeholder="Search contacts..." value="@ViewData["CurrentFilter"]" />
+        <button type="submit" class="btn btn-primary">Search</button>
+    </div>
+</form>
+
+
 
 <table class="table">
     <thead>
