--- a/WebAppCRUD/Views/Contacts/EditBusiness.cshtml
+++ b/WebAppCRUD/Views/Contacts/EditBusiness.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Edit Business Contact</h1>
 
-<form asp-action="Edit" method="post">
+<form asp-action="EditBusiness" method="post">
     <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
