--- a/WebAppCRUD/Views/Shared/_Layout.cshtml
+++ b/WebAppCRUD/Views/Shared/_Layout.cshtml
@@ -26,6 +26,11 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-danger text-white" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
